@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<!ENTITY version "SVN-20081014">
-<!ENTITY releasedate "October 14, 2008">
+<!ENTITY version "SVN-20081015">
+<!ENTITY releasedate "October 15, 2008">
 <!ENTITY copyrightdate "1999&ndash;2008">
 <!ENTITY milestone "7.0">
 <!ENTITY generic-version "development"> <!-- Use "development", "testing", or "x.y[-pre{x}]" -->
